gccida/c1/expand_inline_function
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1136:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1139:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1140:4: error: expected ';' after expression
rtx v31; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1140:5: error: use of undeclared identifier 'v31'
rtx v31; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1144:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1147:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1147:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1159:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1159:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1166:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1166:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1169:4: error: expected ';' after expression
rtx v60; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1169:5: error: use of undeclared identifier 'v60'
rtx v60; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1170:4: error: expected ';' after expression
rtx v61; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1170:5: error: use of undeclared identifier 'v61'
rtx v61; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1171:4: error: expected ';' after expression
rtx v62; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1171:5: error: use of undeclared identifier 'v62'
rtx v62; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1172:4: error: expected ';' after expression
rtx v63; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/integrate.c:1172:5: error: use of undeclared identifier 'v63'
rtx v63; // r15 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_inline_function/src/obj/integrate.o] Error 1
